fix: remove intersection from persistence